# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "relax"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "Kasper Dissing Bargsteen <kb@concordium.com>" ]
description = "Contract used for testing the relaxation of smart contract limits."

[dependencies]
concordium-std = "4.0.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
